--- a/Main.storyboard
+++ b/Main.storyboard
@@ -19,8 +19,11 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uiw-EE-0HK" customClass="BButton">
                                 <rect key="frame" x="145" y="345" width="84" height="45"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="スタート">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal">
+                                    <string key="title" base64-UTF8="YES">
+COeJqQ
+</string>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -30,6 +33,20 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="idou:" destination="2yZ-hH-Wjj" eventType="touchUpInside" id="3U3-MB-zfw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XV6-Z2-eNZ" customClass="BButton">
+                                <rect key="frame" x="151" y="430" width="73" height="43"/>
+                                <state key="normal" title="色">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="keyPath">
+                                        <integer key="value" value="0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="color:" destination="2yZ-hH-Wjj" eventType="touchUpInside" id="g61-Oj-x4c"/>
                                 </connections>
                             </button>
                         </subviews>
